# ice-breaker

./: .pre-commit-config.yaml  README.md  ice_breaker.py  pyproject.toml
data_samples/: linkedin__williamhgates.json  linkedin__yann_lecun.json
ice_breaker/: get_ice_breaker.py  get_profile.py  main.py
ice_breaker/agents/: linkedin_lookup_agent.py  twitter_lookup_agent.py
ice_breaker/core/: log.py  settings.py
ice_breaker/models/: environment.py  lookup_input.py  service_type.py
ice_breaker/scripts/: download_profile.py  get.py  ice_breaker.py
ice_breaker/services/: abstract_service.py  linkedin.py  linkedin_service.py  service.py  twitter.py  twitter_apify.py  twitter_service.py
ice_breaker/tools/: tools.py
notebooks/: scrape_profiles.ipynb
scripts/: download_linkedin_profile.sh  download_twitter_profile.sh
test/: linkedin_sample_profile.json  twitter_sample_profile.json
tests/: test_get_ice_breaker.py  test_get_profile.py
tests/data/: linkedin_sample_profile.json  linkedin_sample_profile_unclean.json
tests/scripts/: test_download_profile.py
tests/services/: test_abstract_services.py  test_linkedin_service.py  test_service.py  test_twitter_service.py
