[tool.poetry]
name = "ice-breaker"
version = "0.1.0"
description = "A GenAI application to gather information about a person, and find an ice breaker."
authors = ["basileazh <basile.elazhari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.339"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
