[tool.poetry]
name = "ice-breaker"
version = "0.1.0"
description = "A GenAI application to gather information about a person, and find an ice breaker."
authors = ["basileazh <basile.elazhari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.339"
openai="^1.3.5"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
pytest-cov = "^2.11"
pytest-mock = "^3.6"
pytest-pylint = "^0.18"
pytest-xdist = "^2.2"
pytest-asyncio = "^0.14"
pylint = "^2.7"
black = "^23.11"
flake8 = "^3.8.4"
mypy = "^1.7.0"
pre-commit = "^3.5"
isort = "^5.7.0"
wheel = "^0.36.2"
twine = "^3.4.1"
pydantic = "^1.8.2"
attrs = "^20.3.0"
pyyaml = "^5.4.1"
aiofiles = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
